--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-scale="true">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dva Demo</title>
+  <script src="antm-viewport.min.js"></script>
+  <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
+  <meta name="author" content="bengi">
+  <script>
+    if ('addEventListener' in document) {
+      document.addEventListener('DOMContentLoaded', function() {
+        FastClick.attach(document.body);
+      }, false);
+    }
+  </script>
+  <!-- 说明：忽略页面中的数字识别为电话号码 -->
+  <meta name="format-detection" content="telephone=no">
+  <!-- 说明：忽略页面中的邮箱格式为邮箱 -->
+  <meta name="format-detection" content="email=no">
+  <!-- 优先使用 IE 最新版本和 Chrome -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="stylesheet" href="/index.css" />
+  <title>Dva Demo</title>
+
 </head>
 <body>
   <div id="root"></div>
