--- a/src/routes/contact/style.less
+++ b/src/routes/contact/style.less
@@ -1,1 +1,19 @@
-
+.contact-container{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .contact-item {
+    height: 130px;
+    .am-list-thumb{
+      border-radius: 50%;
+      overflow: hidden;
+    }
+    img{
+      height: 90px;
+      width: 90px;
+    }
+  }
+  .am-list-header{
+    padding: 0;
+  }
+}
