--- a/src/components/AnimateNavios/plus.less
+++ b/src/components/AnimateNavios/plus.less
@@ -15,7 +15,7 @@
     overflow: hidden;
 }
 .nav-container {
-    background: #ff9630;
+    background: @primary-color;
     height: 88px;
     position: relative;
     font-size: 36px;
@@ -25,7 +25,7 @@
         position: absolute;
         left: 0;
         top: 0;
-        padding: 0 8px;
+        padding: 0 10px;
         box-sizing: border-box;
         width: 100%;
         height: 100%;
