--- a/src/routes/contact/style.less
+++ b/src/routes/contact/style.less
@@ -2,6 +2,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  .am-pull-to-refresh-content-wrapper{
+    min-height: 100%;
+  }
   .contact-item {
     height: 130px;
     .am-list-thumb{
