--- a/src/index.less
+++ b/src/index.less
@@ -6,6 +6,7 @@ html {
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   overflow-y: auto;
+  font-family: "SF Pro SC","SF Pro Text","SF Pro Icons","PingFang SC","Helvetica Neue","Helvetica","Arial",sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
@@ -23,6 +24,7 @@ input[type="search"]::-webkit-search-decoration {
 
 html, body, :global(#root) {
   height: 100%;
+  color: #333;
   .am-tabs-tab-bar-wrap {
 
   }
