--- a/src/components/AnimateNavios/plus.less
+++ b/src/components/AnimateNavios/plus.less
@@ -37,6 +37,12 @@
     .nav-btn {
         font-size: 30px;
         width: 200px;
+        &:first-child{
+          text-align: left;
+        }
+        &:last-child{
+          text-align: right;
+        }
         i.back-icon{
             display: inline-block;
             vertical-align: sub;
