--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,11 +6,11 @@
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <meta name="author" content="bengi">
   <script>
-    if ('addEventListener' in document) {
-      document.addEventListener('DOMContentLoaded', function() {
-        FastClick.attach(document.body);
-      }, false);
-    }
+//    if ('addEventListener' in document) {
+//      document.addEventListener('DOMContentLoaded', function() {
+//        FastClick.attach(document.body);
+//      }, false);
+//    }
   </script>
   <!-- 说明：忽略页面中的数字识别为电话号码 -->
   <meta name="format-detection" content="telephone=no">
