测试新路由

--- a/src/components/AnimateNavios/plus.less
+++ b/src/components/AnimateNavios/plus.less
@@ -38,10 +38,12 @@
         font-size: 30px;
         width: 200px;
         &:first-child{
-          text-align: left;
+          display: flex;
+          justify-content: flex-start;
         }
         &:last-child{
-          text-align: right;
+          display: flex;
+          justify-content: flex-end;
         }
         i.back-icon{
             display: inline-block;
