--- a/src/components/toolBar/style.less
+++ b/src/components/toolBar/style.less
@@ -5,6 +5,7 @@
   justify-content: space-around;
   align-items: center;
   color: @primary-grey;
+  background: #dadada;
   border-top: 1px solid @grey;
   border-bottom: 1px solid @grey;
   font-size: 36px;
@@ -12,8 +13,4 @@
     height: 50px;
     width: 50px;
   }
-}
-
-.write-container{
-  background: white;
 }
