--- a/src/index.less
+++ b/src/index.less
@@ -6,7 +6,7 @@ html {
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   overflow-y: auto;
-  font-family: "SF Pro SC","SF Pro Text","SF Pro Icons","PingFang SC","Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: PingFang-SC-Regular,Helvetica,sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
@@ -25,25 +25,35 @@ input[type="search"]::-webkit-search-decoration {
 html, body, :global(#root) {
   height: 100%;
   color: #333;
-  .am-list-view-scrollview{
-    overflow-y: auto;
-  }
-  .am-list-view-scrollview-content{
-    min-height: 100%;
-  }
-  .am-pull-to-refresh-content-wrapper{
-    min-height: 100%;
-  }
+  //.am-list-view-scrollview{
+  //  overflow-y: auto;
+  //}
+  //.am-list-view-scrollview-content{
+  //  min-height: 100%;
+  //}
+  //.am-pull-to-refresh-content-wrapper{
+  //  min-height: 100%;
+  //}
 }
 body{
   overflow-x: hidden;
-  overflow-y: auto;
+  //overflow-y: auto;
 }
-
-*{
-  &::-webkit-scrollbar {
-    height: 0;
-    overflow: visible;
-    width: 0;
-  }
+#root {
+  //position: fixed;
+  //top: 0;
+  //left: 0;
+  //z-index: 11000;
+  //width: 100%;
+  //height: 100%;
+}
+//*{
+//  &::-webkit-scrollbar {
+//    height: 0;
+//    overflow: visible;
+//    width: 0;
+//  }
+//}
+.am-tab-bar-item{
+  overflow-y: auto;
 }
