兼容大解决

--- a/src/components/AnimateNavios/style.less
+++ b/src/components/AnimateNavios/style.less
@@ -29,9 +29,9 @@
 }
 .page {
     box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    top: 0;
+    //position: absolute;
+    //left: 0;
+    //top: 0;
     width: 100%;
     height: 100%;
     background: #efeff4;
@@ -305,7 +305,7 @@
 }
 
 .navbar-from-right-to-center {
-    .animation(navbarElementFadeInRight @toolbarDuration forwards);    
+    .animation(navbarElementFadeInRight @toolbarDuration forwards);
 }
 .navbar-from-center-to-right {
     .animation(navbarElementFadeOutRight @toolbarDuration forwards);
