--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -78,6 +78,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  font-size: 24px;
+  color: @primary-grey;
+  margin-bottom: 20px;
 }
 @keyframes fadeIn {
   from {
@@ -94,4 +97,11 @@
     font-family: Arial;
     color: #333;
   }
+}
+.center{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
 }
