--- a/src/components/AnimateNavios/plus.less
+++ b/src/components/AnimateNavios/plus.less
@@ -1,6 +1,7 @@
+@nav-height: 88px;
 .pages-body {
     display: flex;
-    overflow: hidden;
+    //overflow: hidden;
     flex-direction: column;
     height: 100%;
     width: 100%;
@@ -10,13 +11,17 @@
 .pages-container {
     position: relative;
     width: 100%;
-    height: 100%;
-    overflow: hidden;
+    min-height: 100%;
+    //overflow: hidden;
 }
 .nav-container {
     background: @primary-color;
-    height: 88px;
-    position: relative;
+    height: @nav-height;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
     font-size: 36px;
     font-weight: 500 !important;
     line-height: 30px;
@@ -61,4 +66,16 @@
             opacity: .5;
         }
     }
+}
+.page.right{
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin-top: @nav-height;
+  z-index: 1;
+}
+body{
+  padding-top: @nav-height;
+  padding-bottom: 100px;
+
 }
