--- a/src/components/dialog/style.less
+++ b/src/components/dialog/style.less
@@ -1,9 +1,10 @@
 .dialog-container {
-  position: fixed;
-  top: 0;
-  left: 0;
   height: 100%;
   width: 100%;
+  .nav-container{
+    position: relative;
+    z-index: 100;
+  }
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
@@ -22,6 +23,11 @@
 }
 .ddd{
   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
 }
 @keyframes popUp {
   from{
