--- a/src/components/routerTabBar/style.less
+++ b/src/components/routerTabBar/style.less
@@ -3,9 +3,21 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  background: rgb(255, 255, 255);
+  border-top: 1PX solid #ddd;
+  height: 100px;
+  z-index: auto;
+  justify-content: space-around;
   align-items: center;
+  .tab-item{
+    flex: 1;
+    font-size: 20px;
+    color: rgb(148, 148, 148);
+    text-align: center;
+    &.active {
+      color: #6bc456;
+    }
+  }
 }
