--- a/src/index.less
+++ b/src/index.less
@@ -1,11 +1,11 @@
 html {
-  -webkit-overflow-scrolling: touch;
+  //-webkit-overflow-scrolling: touch;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
-  overflow-y: auto;
+  //overflow-y: auto;
   font-family: PingFang-SC-Regular,Helvetica,sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -23,21 +23,13 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 html, body, :global(#root) {
-  height: 100%;
+  min-height: 100%;
   color: #333;
-  //.am-list-view-scrollview{
-  //  overflow-y: auto;
-  //}
-  //.am-list-view-scrollview-content{
-  //  min-height: 100%;
-  //}
-  //.am-pull-to-refresh-content-wrapper{
-  //  min-height: 100%;
-  //}
+  background: #efeff4;
 }
 body{
   overflow-x: hidden;
-  //overflow-y: auto;
+  overflow-y: auto;
 }
 #root {
   //position: fixed;
@@ -54,6 +46,6 @@ body{
 //    width: 0;
 //  }
 //}
-.am-tab-bar-item{
-  overflow-y: auto;
+*{
+  font-family: inherit;
 }
