--- a/src/routes/chat/style.less
+++ b/src/routes/chat/style.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background: white;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+  //overflow-y: scroll;
+  //-webkit-overflow-scrolling: touch;
 
 }
