--- a/src/routes/write/style.less
+++ b/src/routes/write/style.less
@@ -19,4 +19,11 @@
   .write-field{
     min-height: 80px;
   }
+  .am-image-picker-upload-btn {
+    border-color: @primary-grey;
+    &::before, &::after {
+      background-color: @primary-grey;
+    }
+
+  }
 }
