--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <script src="antm-viewport.min.js"></script>
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
+  <link rel="shortcut icon" href="emoji.png">
   <meta name="author" content="bengi">
   <script>
     if ('addEventListener' in document) {
