--- a/src/index.less
+++ b/src/index.less
@@ -5,7 +5,6 @@ html {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
-  //overflow-y: auto;
   font-family: PingFang-SC-Regular,Helvetica,sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -22,14 +21,15 @@ input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-html, body, :global(#root) {
-  min-height: 100%;
+html, body {
+  height: 100%;
   color: #333;
   background: #efeff4;
 }
 body{
   overflow-x: hidden;
-  overflow-y: auto;
+  //overflow-y: auto;
+  //overflow-y: auto;
 }
 #root {
   //position: fixed;
@@ -48,4 +48,9 @@ body{
 //}
 *{
   font-family: inherit;
+}
+ul,li,ol{
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
