--- a/src/index.less
+++ b/src/index.less
@@ -21,15 +21,10 @@ input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-html, body {
+html, body, #root{
   height: 100%;
   color: #333;
   background: #efeff4;
-}
-body{
-  overflow-x: hidden;
-  //overflow-y: auto;
-  //overflow-y: auto;
 }
 #root {
   //position: fixed;
