--- a/src/components/routerTabBar/style.less
+++ b/src/components/routerTabBar/style.less
@@ -1,8 +1,4 @@
 .router-tab-bar {
-  position: fixed;
-  //-webkit-transform: translate3d(0,0,0);
-  bottom: 0;
-  left: 0;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -20,5 +16,17 @@
     &.active {
       color: #6bc456;
     }
+  }
+}
+
+.tab-container {
+  display: flex;
+  height: 100%;
+  overflow: hidden;
+  flex-direction: column;
+  flex: 1;
+  >div{
+    flex: 1;
+    overflow: hidden;
   }
 }
