更换成iscroll，目前兼容性良好

--- a/src/routes/comment/style.less
+++ b/src/routes/comment/style.less
@@ -21,3 +21,19 @@
   font-size: 28px;
   color: #929292;
 }
+.comment-list{
+  .home-row{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    &.comment .am-list-item{
+      align-items: flex-start;
+      img{
+        margin-top: 20px;
+      }
+    }
+    .am-list-brief{
+      color: #636363;
+    }
+    border-bottom: 2px solid #e0e0e0;
+  }
+}
