--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -2,6 +2,7 @@
 @grey: #9d9d9d;
 .home-row{
   padding: 0 20px;
+  overflow: hidden;
   background-image: url('../../assets/img/vip_009_os7_d6p.png');
   background-repeat: no-repeat;
   background-position: top right;
