--- a/src/index.less
+++ b/src/index.less
@@ -27,12 +27,10 @@ html, body, #root{
   background: #efeff4;
 }
 #root {
-  //position: fixed;
-  //top: 0;
-  //left: 0;
-  //z-index: 11000;
-  //width: 100%;
-  //height: 100%;
+
+  .am-list-content{
+    color: #333;
+  }
 }
 //*{
 //  &::-webkit-scrollbar {
