--- a/src/routes/chat/style.less
+++ b/src/routes/chat/style.less
@@ -16,7 +16,15 @@
 
 .send-input{
   min-height: 90px;
+  display: flex;
+  flex-direction: row;
   position: absolute;
   width: 100%;
+  .am-textarea-item{
+    flex: 1;
+  }
   bottom: -1px;
+  .am-button{
+    width: 100px;
+  }
 }
