初步完成聊天

--- a/src/components/messageBox/style.less
+++ b/src/components/messageBox/style.less
@@ -5,8 +5,8 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  &-appeared{
-    animation: fadeInUp .75s ease;
+  &:last-child{
+    animation: fadeInUp .5s ease;
   }
   &-date{
     font-size: 26px;
