--- a/src/components/messageBox/style.less
+++ b/src/components/messageBox/style.less
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  &:last-child{
+  &.latest {
     animation: fadeInUp .5s ease;
   }
   &-date{
